# final_project_Big_Data

./: .gitignore  README.md  db_connection.py  docker_compose.yaml  insert_bronze_table.py  insert_gold_tables.py  insert_silver_table.py  kafka_consumer.py  kafka_producer.py  pyproject.toml  tables.py  visualizations.py
